css changes fixed project tabs, added spacing at bottom of contact adjusted spacing in skills section

--- a/src/App.css
+++ b/src/App.css
@@ -133,6 +133,9 @@
     min-width: 85vw;
     height: 45vh;
   }
+  .projectCube img {
+    max-height: 65%;
+  }
   .port {
     padding-bottom: 5vh;
   }
